fix the adapt viewport problem ,however the bg is kind of stretched, will the mobile port as first/适配问题更改到了80%、图像有些拉伸，暂时提交手机测试

--- a/css/public.css
+++ b/css/public.css
@@ -50,19 +50,33 @@ body,html{
 
 /*loading页面*/
 .pageLoadBox{
-    width: 100%;
-    height: 100%;
+    width: 100vh;
+    height: 100vw;
     transform-origin: left top 0;
     /*-webkit-transform: rotate(90deg);*/
-    transform: translate(100%, 0) rotate(90deg);
+    /*transform: translate(100%, 0) rotate(90deg);*/
+
+    -webkit-transform:translate(100vw, 0) rotate(90deg);
+    -moz-transform:translate(100vw, 0) rotate(90deg);
+    -o-transform:translate(100vw, 0) rotate(90deg);
+    -ms-transform:translate(100vw, 0) rotate(90deg);
+    transform:translate(100vw, 0) rotate(90deg);
+
+    background: url("../images/page1/bg.jpg") 0 0 no-repeat;
+    background-size: 100% 100%;
 }
 .loadPercent{
     font-size: 2.5rem;
+    position: relative;
+    text-align: center;
+    top: 50vw;
 }
 .page-loading{
     width: 166px;
     height: 54px;
     position: absolute;
+    top: 40vw;
+    left: 37vh;
 }
 .animLoad{
     /*animation: animload 1.2s steps(3) infinite;*/
